# multiemu

./: .gitignore  Cargo.toml  README.md  readme.md  rustfmt.toml
def/atarilynx/: Cargo.toml
def/atarilynx/src/: lib.rs  mapctl.rs  suzy.rs
def/chip8/: Cargo.toml
def/chip8/benches/: instruction_decode.rs  machine_cycle.rs
def/chip8/src/: audio.rs  lib.rs  timer.rs
def/chip8/src/display/: mod.rs  software.rs  vulkan.rs
def/chip8/src/processor/: decoder.rs  input.rs  instruction.rs  interpret.rs  mod.rs  task.rs
def/intel8080/: Cargo.toml
def/intel8080/src/: decode.rs  lib.rs
def/misc/: Cargo.toml
def/misc/benches/: read.rs  registry.rs  write.rs
def/misc/src/: mos6532_riot.rs
def/misc/src/memory/: mirror.rs  null.rs  standard.rs
definition/atari2600/: Cargo.toml
definition/atari2600/benches/: benches.rs  machine_cycle.rs  tia_access.rs
definition/atari2600/src/: cartridge.rs  lib.rs  tia.rs
definition/atari2600/src/cartridge/: banking.rs  mod.rs  raw.rs
definition/atari2600/src/gamepad/: joystick.rs  mod.rs
definition/atari2600/src/tia/: color.rs  config.rs  memory.rs  mod.rs  software.rs  task.rs  vulkan.rs
definition/atarilynx/: Cargo.toml
definition/atarilynx/src/: lib.rs  mapctl.rs  suzy.rs
definition/chip8/: Cargo.toml
definition/chip8/benches/: instruction_decode.rs  machine_cycle.rs
definition/chip8/src/: audio.rs  font.rs  lib.rs  timer.rs
definition/chip8/src/display/: backend.rs  mod.rs  opengl.rs  software.rs  vulkan.rs
definition/chip8/src/processor/: decoder.rs  input.rs  instruction.rs  interpret.rs  jit.rs  mod.rs  task.rs
definition/i8080/: Cargo.toml
definition/i8080/src/: lib.rs
definition/misc/: Cargo.toml
definition/misc/benches/: read.rs  registry.rs  write.rs
definition/misc/src/: lib.rs  m6532_riot.rs  mos6532_riot.rs  tests.rs
definition/misc/src/memory/: mirror.rs  mod.rs  null.rs  rom.rs  standard.rs
definition/mos6502/: Cargo.toml
definition/mos6502/benches/: raw_execution.rs
definition/mos6502/src/: instruction.rs  lib.rs  task.rs
definition/mos6502/src/decoder/: group1.rs  group2.rs  group3.rs  mod.rs  test.rs  undocumented.rs
definition/mos6502/src/interpret/: mod.rs
definition/nes/: Cargo.toml
definition/nes/benches/: machine_cycle.rs  machine_initialization.rs  memory.rs  rom_parse.rs
definition/nes/src/: lib.rs
definition/nes/src/apu/: mod.rs  pulse.rs
definition/nes/src/cartidge/: mapper.rs  mod.rs
definition/nes/src/cartridge/: mapper.rs  mod.rs
definition/nes/src/gamepad/: controller.rs
definition/nes/src/ppu/: background.rs  color.rs  mod.rs  oam.rs  state.rs  task.rs
gui/: Cargo.toml  build.rs
gui/benches/: gui.rs
gui/shader/: egui.wgsl
gui/shaders/: egui.wgsl
gui/src/: build_machine.rs  cli.rs  lib.rs  main.rs  rendering_backend.rs  timing_tracker.rs
gui/src/gui/: mod.rs  software_rasterizer.rs  software_rendering.rs
gui/src/gui/menu/: database.rs  file_browser.rs  memory_viewer.rs  mod.rs  options.rs
gui/src/gui/software_rendering/: mod.rs  render_pixel.rs
gui/src/runtime/: main_loop.rs  mod.rs  state.rs
gui/src/runtime/desktop/: audio.rs  gamepad.rs  keyboard.rs  main_loop.rs  mod.rs  windowing.rs
gui/src/runtime/nintendo_3ds/: mod.rs
lib/audio/: Cargo.toml
lib/audio/benches/: conversion.rs  remix.rs  resample.rs
lib/audio/src/: lib.rs
lib/audio/src/frame/: mod.rs
lib/audio/src/generation/: mod.rs  square.rs
lib/audio/src/interpolate/: cubic.rs  linear.rs  mod.rs  sinc.rs
lib/audio/src/sample/: conversion.rs  iterator.rs  mod.rs
lib/config/: Cargo.toml
lib/config/src/: audio.rs  graphics.rs  input.rs  lib.rs
lib/frontend/: Cargo.toml
lib/frontend/benches/: software_rendering.rs
lib/frontend/shaders/: egui.wgsl
lib/frontend/src/: egui.wgsl  frontend.rs  hotkey.rs  lib.rs  machine_factories.rs  platform.rs  runtime.rs
lib/frontend/src/backend/: audio.rs  graphics.rs  mod.rs
lib/frontend/src/environment/: audio.rs  gamepad.rs  graphics.rs  mod.rs
lib/frontend/src/gui/: about.rs  file_browser.rs  gamepad_config.rs  mod.rs  options.rs  software_rendering.rs
lib/graphics/: Cargo.toml
lib/graphics/src/: lib.rs
lib/graphics/src/backend/: mod.rs  opengl.rs  software.rs  vulkan.rs
lib/graphics/src/shader/: glsl.rs  mod.rs  spirv.rs
lib/locale/: Cargo.toml  build.rs  readme.md
lib/locale/src/: lib.rs
lib/machine/: Cargo.toml
lib/machine/src/: input.rs  lib.rs  message.rs  trigger.rs
lib/machine/src/audio/: mod.rs
lib/machine/src/builder/: audio.rs  display.rs  input.rs  memory.rs  mod.rs  task.rs
lib/machine/src/component/: component_ref.rs  main_thread_queue.rs  mod.rs  store.rs
lib/machine/src/display/: mod.rs  opengl.rs  software.rs  vulkan.rs
lib/machine/src/input/: manager.rs  mod.rs  virtual_gamepad.rs
lib/machine/src/memory/: callbacks.rs  memory_translation_table.rs  mod.rs
lib/machine/src/processor/: cache.rs  decoder.rs  instruction.rs  mod.rs
lib/machine/src/scheduler/: mod.rs  run.rs  task.rs
lib/machine/src/utils/: fragile.rs  main_thread_queue.rs  mod.rs
lib/rom/: Cargo.toml
lib/rom/src/: id.rs  info.rs  lib.rs  manager.rs
lib/rom/src/system/: extension.rs  guess.rs  mod.rs
lib/runtime/: Cargo.toml
lib/runtime/benches/: conversion.rs  remix.rs  resample.rs
lib/runtime/src/: audio.rs  graphics.rs  lib.rs  path.rs  platform.rs
lib/runtime/src/audio/: mod.rs
lib/runtime/src/builder/: audio.rs  display.rs  graphics.rs  input.rs  memory.rs  mod.rs  task.rs
lib/save/: Cargo.toml
lib/save/src/: component_name.rs  lib.rs
lib/wgsl-bindgen/: Cargo.toml
lib/wgsl-bindgen/src/: globals.rs  lib.rs  type_translator.rs
shell/citrine/: Cargo.toml  readme.md
shell/destinezite/: Cargo.toml  readme.md
shell/destinezite/src/: audio.rs  build_machine.rs  cli.rs  main.rs  windowing.rs
utils/: Cargo.toml
utils/src/: logiqx.rs  main.rs
utils/src/convert/: mod.rs  wiigamecube.rs
utils/src/database/: logiqx.rs  mod.rs  native.rs  redump.rs
utils/src/patch/: bps.rs  mod.rs
utils/src/rom/: export.rs  import.rs  mod.rs  verify.rs
utils/src/search/: mod.rs
(+330 files in other folders)
