[workspace]
resolver = "3"
members = ["utils", "definition/*", "shell/*", "lib/*"]

[workspace.dependencies]
# Main emulator runtime shared with shell and components
multiemu-runtime = { path = "lib/runtime" }
multiemu-frontend = { path = "lib/frontend" }
multiemu-locale = { path = "lib/locale" }
multiemu-definition-misc = { path = "definition/misc" }
multiemu-definition-mos6502 = { path = "definition/mos6502" }
multiemu-definition-chip8 = { path = "definition/chip8" }
multiemu-definition-nes = { path = "definition/nes" }
multiemu-definition-intel8080 = { path = "definition/intel8080" }
multiemu-definition-atari2600 = { path = "definition/atari2600" }
multiemu-definition-atarilynx = { path = "definition/atarilynx" }
multiemu-audio = { path = "lib/audio" }
multiemu-range = { path = "lib/range" }

# External dependencies
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rangemap = { version = "1.7", features = ["serde1"] }
redb = { version = "3.1", features = ["logging"] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_with = "3.15"
serde-inline-default = "1.0"
rayon = "1.11"
nalgebra = { version = "0.34", features = [
    "serde-serialize",
    "convert-bytemuck",
    "rayon",
] }
bytemuck = { version = "1.24", features = ["derive"] }
num = { version = "0.4", features = ["serde"] }
arrayvec = { version = "0.7", features = ["serde"] }
thiserror = "2.0"
bitvec = { version = "1.0", features = ["serde"] }
rand = "0.9"
palette = { version = "0.7", features = ["bytemuck", "serializing", "named"] }
clap = { version = "4.5", features = ["derive"] }
criterion = "0.7"
uuid = { version = "1.18", features = ["serde", "v4"] }
ringbuffer = "0.16"
bincode = { version = "2.0", features = ["serde"] }
rustc-hash = "2.1"
ron = "0.12"
data-encoding = "2.9"
scc = "3.4"
sealed = "0.6"
crossbeam = "0.8"
egui = { version = "0.32", features = ["rayon", "log"] }
naga = { version = "27.0", features = ["wgsl-in", "serialize", "deserialize"] }
itertools = "0.14"
smallvec = "1.15"
cfg-if = "1.0"
bytes = "1.10"
tempfile = "3.21"
versions = "7.0"
regex = "1.12"
indexmap = "2.12"

[profile.bench]
debug = true
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1
