[package]
name = "multiemu-gui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kay <lambdadeltacommunism@gmail.com>"]
description = "A multi system emulator"

# We try to keep as little and as multiplatform dependencies as possible
# I do not expect our pulled in dependencies to expand much as this program evolves

[dependencies]
multiemu-rom = { workspace = true }
multiemu-config = { workspace = true }
multiemu-machine = { workspace = true }
multiemu-input = { workspace = true }
multiemu-macros = { workspace = true }
multiemu-audio = { workspace = true }
multiemu-definition-chip8 = { workspace = true }
multiemu-definition-nes = { workspace = true }
multiemu-definition-atari2600 = { workspace = true }
multiemu-definition-atarilynx = { workspace = true }
naga = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true, features = ["rayon"] }
bytemuck = { workspace = true }
num = { workspace = true }
arrayvec = { workspace = true }
thiserror = { workspace = true }
bitvec = { workspace = true }
rangemap = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam = { workspace = true }
palette = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true }
versions = { workspace = true }
ringbuffer = { workspace = true }
egui = { version = "0.31", features = ["default_fonts", "rayon", "log"] }
egui_extras = { version = "0.31", default-features = false, features = [
    "image",
] }
image = { version = "0.25", default-features = false, features = ["webp"] }

# Desktop type dependencies
[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dependencies]
winit = { version = "0.30", default-features = false, features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_06",
    "android-game-activity",
] }
egui-winit = { version = "0.31", default-features = false, features = [
    "android-game-activity",
    "wayland",
    "x11",
] }
softbuffer = "0.4"
cpal = "0.15"
gilrs = "0.11"
clap = { workspace = true }
# Vulkan support
vulkano = { workspace = true, optional = true }

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dev-dependencies]
criterion = { workspace = true }

# Jit support
[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "riscv64", target_arch = "s390x")))'.dependencies]
# cranelift = { workspace = true, optional = true }

[target.'cfg(target_os = "horizon")'.dependencies]
ctru-rs = { workspace = true }

[build-dependencies]
multiemu-macros = { workspace = true }
cfg_aliases = { workspace = true }

[features]
default = ["vulkan"]
vulkan = [
    "dep:vulkano",
    "multiemu-machine/vulkan",
    "multiemu-definition-chip8/vulkan",
    "multiemu-definition-nes/vulkan",
    "multiemu-definition-atari2600/vulkan",
    "multiemu-definition-atarilynx/vulkan",
]

[package.metadata.deb]
maintainer = "Kay <lambdadeltacommunism@gmail.com>"
