[package]
name = "fluxemu-utils"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kay <lambdadeltakay@proton.me>"]
description = "A command line utility interface for FluxEMU, but has tools generically useful for rom organization"

[dependencies]
fluxemu-runtime = { workspace = true }
fluxemu-locale = { workspace = true }
# TODO: Split up the frontend crate so this doesn't pull in graphics stuff or merge this crate into fluxemu-shell-destinezite
fluxemu-frontend = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
redb = { workspace = true }
strum = { workspace = true }
scc = { workspace = true }
tempfile = { workspace = true }
data-encoding = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
quick-xml = { version = "0.38", features = ["serialize"] }
zip = "7.0"
strsim = "0.11"
nod = "2.0.0-alpha.4"
ureq = { version = "3.1", features = ["socks-proxy", "charset"] }
num_cpus = "1.17"

[package.metadata.deb]
maintainer = "Kay <lambdadeltakay@proton.me>"
