[package]
name = "multiemu-definition-atarilynx"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu = { workspace = true }
multiemu-definition-misc = { workspace = true }
multiemu-definition-mos6502 = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
deku = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }

[features]
vulkan = ["multiemu/vulkan"]
opengl = ["multiemu/opengl"]
