[package]
name = "multiemu-definition-misc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu = { workspace = true }
rangemap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
scc = { workspace = true }
rangetools = { workspace = true }
bytes = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dependencies]
memmap2 = "0.9"

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[[bench]]
name = "registry"
harness = false

