[package]
name = "multiemu-definition-atari2600"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-rom = { workspace = true }
multiemu-runtime = { workspace = true }
multiemu-input = { workspace = true }
multiemu-audio = { workspace = true }
multiemu-graphics = { workspace = true }
multiemu-definition-misc = { workspace = true }
multiemu-definition-mos6502 = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
codes-iso-3166 = { workspace = true }
bytemuck = { workspace = true }
bincode = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
multiemu-config = { workspace = true }
ron = { workspace = true }
criterion = { workspace = true }

[features]
vulkan = ["multiemu-graphics/vulkan"]
opengl = ["multiemu-graphics/opengl"]

[[bench]]
name = "machine_cycle"
harness = false
