[package]
name = "fluxemu-definition-atari2600"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-runtime = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-definition-misc = { workspace = true }
fluxemu-definition-mos6502 = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
bytemuck = { workspace = true }
bytes = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
fluxemu-frontend = { workspace = true }
ron = { workspace = true }
criterion = { workspace = true }

[features]
vulkan = ["fluxemu-runtime/vulkan"]
opengl = ["fluxemu-runtime/opengl"]

[[bench]]
name = "machine_cycle"
harness = false
