[package]
name = "fluxemu-definition-atarilynx"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-runtime = { workspace = true }
fluxemu-definition-misc = { workspace = true }
fluxemu-definition-mos6502 = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }

[features]
vulkan = ["fluxemu-runtime/vulkan"]
opengl = ["fluxemu-runtime/opengl"]
