[package]
name = "multiemu-definition-chip8"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-rom = { workspace = true }
multiemu-runtime = { workspace = true }
multiemu-input = { workspace = true }
multiemu-definition-misc = { workspace = true }
num = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
arrayvec = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
nalgebra = { workspace = true }
strum = { workspace = true }
rangemap = { workspace = true }
rand = { workspace = true }
palette = { workspace = true }
bincode = { workspace = true }
vulkano = { workspace = true, optional = true }
glow = { workspace = true, optional = true }

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dev-dependencies]
criterion = { workspace = true }

[features]
vulkan = ["dep:vulkano", "multiemu-runtime/vulkan"]
opengl = ["dep:glow", "multiemu-runtime/opengl"]

[[bench]]
name = "instruction_decode"
harness = false
