[package]
name = "multiemu-definition-chip8"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-runtime = { workspace = true }
multiemu-audio = { workspace = true }
multiemu-definition-misc = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
arrayvec = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
nalgebra = { workspace = true }
strum = { workspace = true }
rangemap = { workspace = true }
rand = { workspace = true }
palette = { workspace = true }
ringbuffer = { workspace = true }
rmp-serde = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
multiemu-frontend = { workspace = true}
ron = { workspace = true }

[features]
vulkan = ["multiemu-runtime/vulkan"]
opengl = ["multiemu-runtime/opengl"]
