[package]
name = "multiemu-definition-i8080"
version = "0.1.0"
edition = "2024"

[dependencies]
multiemu-rom = { workspace = true }
multiemu-config = { workspace = true }
multiemu-machine = { workspace = true }
multiemu-definition-misc = { workspace = true }
enumflags2 = { workspace = true }
num = { workspace = true }
strum = { workspace = true }
bitvec = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "riscv64", target_arch = "s390x")))'.dependencies]
cranelift = { workspace = true, optional = true }

[build-dependencies]
multiemu-macros = { workspace = true }
cfg_aliases = { workspace = true }

[features]
jit = ["dep:cranelift", "multiemu-machine/jit"]
