[package]
name = "multiemu-definition-mos6502"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-runtime = { workspace = true }
num = { workspace = true }
strum = { workspace = true }
bitvec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
arrayvec = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
multiemu-definition-misc = { workspace = true }
rangemap = { workspace = true }
