[package]
name = "multiemu-definition-mos6502"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-runtime = { workspace = true }
strum = { workspace = true }
bitvec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
arrayvec = { workspace = true }
bytemuck = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
multiemu-definition-misc = { workspace = true }
rangemap = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "raw_execution"
harness = false
