[package]
name = "multiemu-definition-nes"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-runtime = { workspace = true }
multiemu-definition-misc = { workspace = true }
multiemu-definition-mos6502 = { workspace = true }
multiemu-range = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
ringbuffer = { workspace = true }
rand = { workspace = true }
arrayvec = { workspace = true }
bytes = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
multiemu-frontend = { workspace = true}
ron = { workspace = true }
criterion = { workspace = true }

[features]
vulkan = ["multiemu-runtime/vulkan"]
opengl = ["multiemu-runtime/opengl"]

[[bench]]
name = "machine_cycle"
harness = false
