[package]
name = "fluxemu-definition-nes"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
fluxemu-runtime = { workspace = true }
fluxemu-definition-misc = { workspace = true }
fluxemu-definition-mos6502 = { workspace = true }
fluxemu-range = { workspace = true }
fluxemu-audio = { workspace = true }
rangemap = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
nalgebra = { workspace = true }
palette = { workspace = true }
ringbuffer = { workspace = true }
rand = { workspace = true }
arrayvec = { workspace = true }
bytes = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
fluxemu-frontend = { workspace = true }
ron = { workspace = true }
criterion = { workspace = true }

[features]
vulkan = ["fluxemu-runtime/vulkan"]
opengl = ["fluxemu-runtime/opengl"]

[[bench]]
name = "machine_cycle"
harness = false
