[package]
name = "multiemu-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { workspace = true }
num = { workspace = true }
ringbuffer = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "resample"
harness = false