[package]
name = "multiemu-audio"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
nalgebra = { workspace = true }
num = { workspace = true }
ringbuffer = { workspace = true }
sealed = { workspace = true }

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "conversion"
harness = false

[[bench]]
name = "resample"
harness = false

[[bench]]
name = "remix"
harness = false
