[package]
name = "multiemu-config"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
multiemu-input = { workspace = true }
multiemu-rom = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
strum = { workspace = true }
ron = { workspace = true }

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dependencies]
dirs = "6.0"

[build-dependencies]
multiemu-macros = { workspace = true }
cfg_aliases = { workspace = true }
