[package]
name = "multiemu-config"
version = "0.1.0"
edition = "2024"

[dependencies]
multiemu-rom = { workspace = true }
multiemu-input = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
strum = { workspace = true }

[target.'cfg(all(any(target_family = "unix", target_os = "windows"), not(target_os = "horizon")))'.dependencies]
dirs = "6.0"
