[package]
name = "multiemu-frontend"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kay <lambdadeltakay@proton.me>"]

[dependencies]
multiemu-runtime = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
ringbuffer = { workspace = true }
tracing = { workspace = true }
palette = { workspace = true }
versions = { workspace = true }
strum = { workspace = true }
egui = { workspace = true }
indexmap = { workspace = true }
cfg-if = { workspace = true }
egui_extras = { version = "0.32", default-features = false, features = [
    "image",
] }
egui-phosphor = "0.10"
sysinfo = "0.37"
byte-unit = "5.1"

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "software_rendering"
harness = false
