[package]
name = "multiemu-frontend"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kay <lambdadeltakay@proton.me>"]

[dependencies]
multiemu-runtime = { workspace = true }
multiemu-range = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
ringbuffer = { workspace = true }
tracing = { workspace = true }
palette = { workspace = true }
versions = { workspace = true }
strum = { workspace = true }
egui = { workspace = true }
indexmap = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
serde-inline-default = { workspace = true }
serde_with = { workspace = true }
ron = { workspace = true }
rustc-hash = { workspace = true }
scc = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
egui_extras = { version = "0.33", default-features = false, features = [
    "image",
] }
egui-phosphor = "0.11"
egui-snarl = "0.9"
egui-toast = "0.19"
sysinfo = "0.37"
byte-unit = "5.2"

[target.'cfg(any(target_family = "unix", target_os = "windows"))'.dev-dependencies]
criterion = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
dirs = "6.0"

[[bench]]
name = "software_rendering"
harness = false
